@@ -13,6 +13,7 @@ Version 1.7.7+svn:
 
 * User interface:
    * Fixed storyscreen buttons occasionally disappearing.
+   * Improve display order of unit healing (patch #1343)
 
 
 Version 1.7.7:
@@ -25,17 +26,17 @@ Version 1.7.7:
    * New translations: Shavian.
    * Updated translations: Czech, Dutch, Estonian, Finnish, German, Hungarian,
      Lithuanian, Russian, Serbian, Slovak, Spanish.
-	 
+
  * Multiplayer:
    * Updated map: The Manzivan Traps
-	 
+
  * Units:
    * Removed Elder Wose and Shock Trooper from random_leader of the default era.
    * Removed Ancient Wose and Iron Mauler from random_leader of the AoH era.
    * New animation WML and macros for the Drakes.
    * Increased the XP required to advance for the Orcish Assassin from 30 to 34.
    * Changed the cold resistance of the naga line from -20% to 0%.
-   
+
  * User interface:
    * Add-ons descriptions are displayed according to filtering in
      the download list.
